--- a/webpage/templates/webpage/index.html
+++ b/webpage/templates/webpage/index.html
@@ -1,24 +1,144 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andorinha Airlines</title>
-</head>
-<body>
-    <script>
-        window.watsonAssistantChatOptions = {
-            integrationID: "bf0b9c15-8b29-47f0-b9f7-d4a0a77875ed", // The ID of this integration.
-            region: "us-south", // The region your integration is hosted in.
-            serviceInstanceID: "6fc0d167-6750-436d-8088-c497330430ea", // The ID of your service instance.
-            onLoad: function(instance) { instance.render(); }
-          };
-        setTimeout(function(){
-          const t=document.createElement('script');
-          t.src="https://web-chat.global.assistant.watson.appdomain.cloud/loadWatsonAssistantChat.js";
-          document.head.appendChild(t);
-        });
-      </script>
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Andorinha Airlines</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/img/andorinha_logo.png" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+        <!-- Simple line icons-->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body>
+
+        <!-- Barra de navegação -->
+        <nav class="navbar navbar-light bg-light static-top" id="stick_menu_custom">
+            <div class="container">
+                <a class="navbar-brand" href="#!"><img width="40" height="40" src="assets/img/andorinha_logo.png" alt="">Andorinha Airlines</a>
+            </div>
+        </nav>
+
+        <!-- Título principal -->
+        <header class="masthead text-white text-center">
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-9 mx-auto"><h1 class="mb-5">Seja bem-vindo à Andorinha Airlines!</h1></div>
+                </div>
+                <div class="col-xl-9 mx-auto"><h2 class="mb-5">Voos diários entre Curitiba, Florianópolis e Porto Alegre</h2></div>
+            </div>
+        </header>
+
+        <!-- Imagens dos destinos -->
+        <section class="showcase">
+            <div class="container-fluid p-0">
+                <div class="row no-gutters">
+                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/curitiba_900_600.jpg')"></div>
+                    <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+                        <h2>Curitiba, Paraná</h2>
+                        <p class="lead mb-0">Além de ser a maior cidade da região Sul do Brasil, Curitiba também é referência em qualidade de vida, planejamento e mobilidade urbana.</p>
+                    </div>
+                </div>
+                <div class="row no-gutters">
+                    <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/floripa_900_600.jpg')"></div>
+                    <div class="col-lg-6 my-auto showcase-text">
+                        <h2>Florianópolis, Santa Catarina</h2>
+                        <p class="lead mb-0">Não é à toa que a capital catarinense é conhecida como Ilha da Magia. As belezas naturais de Florianópolis encantam à primeira vista. São cerca de uma centena de praias espalhadas pela ilha costeira e pela pequena península continental que forma a cidade.</p>
+                    </div>
+                </div>
+                <div class="row no-gutters">
+                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/porto_alegre_900_600.jpg')"></div>
+                    <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+                        <h2>Porto Alegre, Rio Grande do Sul</h2>
+                        <p class="lead mb-0">Que tal passear a pé pelo Centro Histórico, assistir ao pôr do sol na orla do Guaíba ou almoçar em uma tradicional churrascaria?! Porto Alegre espera por você de braços abertos!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Depoimentos -->
+        <section class="testimonials text-center bg-light">
+            <div class="container">
+                <h2 class="mb-5">O que as pessoas estão falando...</h2>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-1.jpg" alt="..." />
+                            <h5>Priscilla Gama</h5>
+                            <p class="font-weight-light mb-0"><em>"A pontualidade da Andorinha é fantástica, sempre no horário me ajudando a cuidar do meu bem mais valioso, o tempo!"</em></p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-2.jpg" alt="..." />
+                            <h5>Bruno Souza</h5>
+                            <p class="font-weight-light mb-0"><em>"Porto e Floripa nunca foram tão próximas! Com a Andorinha surfo na Joaquinha e vejo o pôr do sol no Gauíba no mesmo dia!"</em></p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-3.jpg" alt="..." />
+                            <h5>Joana Guimarães</h5>
+                            <p class="font-weight-light mb-0"><em>"A atenção a cada detalhe faz a diferença, não são apenas voos, são experiências de vida!"</em></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Footer-->
+        <footer class="footer bg-light">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
+                        <ul class="list-inline mb-2">
+                            <li class="list-inline-item"><a href="#!">Sobre</a></li>
+                            <li class="list-inline-item">⋅</li>
+                            <li class="list-inline-item"><a href="#!">Contato</a></li>
+                        </ul>
+                        <p class="text-muted small mb-4 mb-lg-0">© Andorinha Airlines 2021. Todos os direitos reservados.</p>
+                    </div>
+                    <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
+                        <ul class="list-inline mb-0">
+                            <li class="list-inline-item mr-3">
+                                <a href="#!"><i class="fab fa-facebook fa-2x fa-fw"></i></a>
+                            </li>
+                            <li class="list-inline-item mr-3">
+                                <a href="#!"><i class="fab fa-twitter-square fa-2x fa-fw"></i></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#!"><i class="fab fa-instagram fa-2x fa-fw"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- Bootstrap core JS-->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+        <script>
+            window.watsonAssistantChatOptions = {
+                integrationID: "bf0b9c15-8b29-47f0-b9f7-d4a0a77875ed", // The ID of this integration.
+                region: "us-south", // The region your integration is hosted in.
+                serviceInstanceID: "6fc0d167-6750-436d-8088-c497330430ea", // The ID of your service instance.
+                onLoad: function(instance) { instance.render(); }
+              };
+            setTimeout(function(){
+              const t=document.createElement('script');
+              t.src="https://web-chat.global.assistant.watson.appdomain.cloud/loadWatsonAssistantChat.js";
+              document.head.appendChild(t);
+            });
+          </script>
+    </body>
 </html>
