--- a/webpage/static/css/styles.css
+++ b/webpage/static/css/styles.css
@@ -10078,14 +10078,14 @@ header.masthead h1 {
   box-shadow: 0px 5px 5px 0px #adb5bd;
 }
 
-.call-to-action {
+/* .call-to-action {
   position: relative;
   background-color: #343a40;
   background: url("../assets/img/bg-masthead.jpg") no-repeat center center;
   background-size: cover;
   padding-top: 7rem;
   padding-bottom: 7rem;
-}
+} */
 .call-to-action .overlay {
   position: absolute;
   background-color: #212529;
