--- a/webpage/templates/webpage/index.html
+++ b/webpage/templates/webpage/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
@@ -7,7 +8,7 @@
         <meta name="author" content="" />
         <title>Andorinha Airlines</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="static/assets/img/andorinha_logo.png" />
+        <link rel="icon" type="image/x-icon" href="{% static 'assets/img/andorinha_logo.png' %}">
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
         <!-- Simple line icons-->
@@ -15,14 +16,14 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="static/css/styles.css" rel="stylesheet" />
+        <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     </head>
     <body>
 
         <!-- Barra de navegação -->
         <nav class="navbar navbar-light bg-light static-top" id="stick_menu_custom">
             <div class="container">
-                <a class="navbar-brand" href="#!"><img width="40" height="40" src="static/assets/img/andorinha_logo.png" alt="">Andorinha Airlines</a>
+                <a class="navbar-brand" href="#!"><img width="40" height="40" src="{% static 'assets/img/andorinha_logo.png' %}" alt="">Andorinha Airlines</a>
             </div>
         </nav>
 
@@ -71,21 +72,21 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="static/assets/img/testimonials-1.jpg" alt="..." />
+                            <img class="img-fluid rounded-circle mb-3" src="{% static 'assets/img/testimonials-1.jpg' %}" alt="..." />
                             <h5>Priscilla Gama</h5>
                             <p class="font-weight-light mb-0"><em>"A pontualidade da Andorinha é fantástica, sempre no horário me ajudando a cuidar do meu bem mais valioso, o tempo!"</em></p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="static/assets/img/testimonials-2.jpg" alt="..." />
+                            <img class="img-fluid rounded-circle mb-3" src="{% static 'assets/img/testimonials-2.jpg' %}" alt="..." />
                             <h5>Bruno Souza</h5>
                             <p class="font-weight-light mb-0"><em>"Porto e Floripa nunca foram tão próximas! Com a Andorinha surfo na Joaquinha e vejo o pôr do sol no Gauíba no mesmo dia!"</em></p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="static/assets/img/testimonials-3.jpg" alt="..." />
+                            <img class="img-fluid rounded-circle mb-3" src="{% static 'assets/img/testimonials-3.jpg' %}" alt="..." />
                             <h5>Joana Guimarães</h5>
                             <p class="font-weight-light mb-0"><em>"A atenção a cada detalhe faz a diferença, não são apenas voos, são experiências de vida!"</em></p>
                         </div>
@@ -126,7 +127,7 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="static/js/scripts.js"></script>
+        <script src="{% static 'js/scripts.js' %}"></script>
         <script>
             window.watsonAssistantChatOptions = {
                 integrationID: "bf0b9c15-8b29-47f0-b9f7-d4a0a77875ed", // The ID of this integration.
